# co-op-alien-shooter

back-end/: co-op-alien-shooter.cabal  default.nix
back-end/src/: GameLogic.hs  Main.hs  Serialization.hs
front-end/: index.html  main.js
