cabal-version:       >=1.10
name:                stupid-sync
version:             0.1.0.0
synopsis:            co-op alien shooter game back-end
license:             GPL-3
license-file:        LICENSE
author:              Matthias Hutzler
maintainer:          matthias.hutzler@math.uni-augsburg.de
build-type:          Simple

executable co-op-alien-shooter
  main-is:             Main.hs
  other-modules:       GameLogic
                       Serialization
  build-depends:
      base >=4.13 && <4.14
    , websockets >=0.12 && <0.13
    , bytestring >=0.10 && <0.11
    , containers >=0.6 && <0.7

  hs-source-dirs:      src

  default-language:    Haskell2010

